# Richness-Detection-for-Interview-Responses-POC-

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_V2.md  BEFORE_AFTER_COMPARISON.md  CLEANUP_ANALYSIS.md  CLEANUP_SUMMARY.md  COMPONENT_MAP.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_MANAGER_REFACTORING.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_INDEX.md  app.py  complete_changes_needed.py  implementation_plan.md  pyproject.toml  replacement_code.py  requirements.txt  test_config_loading.py  test_llm_manager_refactor.py  verify_refactoring.py
configs/: default_interview.yaml  interview_config.yaml  llm_config.yaml  model_config.yaml
context/: bug_report_20251129_210300.md  bug_report_20251129_215219.md  bug_report_20251129_224337.md  bug_report_20251129_230142.md  bug_report_20251201_143954.md  design_doc.md  generic_interview_skeleton.md  how_richness_score_calculation_works.md  introduction.md  quality_assessment_implementation_plan.md  schema_example_1.yaml  schema_example_2.yaml  suggestions_20251102_000400.md
docs/: ARCHITECTURE_V2_CLEANUP_SUMMARY.md  CONFIG_CLEANUP_SUMMARY.md  FEEDBACK_IMPLEMENTATION_PLAN.md  FINAL_ARCHITECTURE_SUMMARY.md  FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_CONFIG_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION_SUMMARY.md  SEMANTIC_DEDUPLICATION.md  leakage_report.md
prompts/: behavioral_warmup_prompt.yaml  extraction_prompts.yaml  extraction_prompts_v0.2.yaml  question_templates.yaml
reviews/: 20251209.md  20251209_plan.md  20251210.md  20251211.md  20251212.md  20251212_2.md  20251214.md
schemas/: means_end_chain_v0.1.yaml  means_end_chain_v0.2.yaml  usage_script_v0.1.yaml
src/: __init__.py  controller.py
tests/: __init__.py  final_validation.py  test_arbitration.py  test_concept_extractor.py  test_core_functionality.py  test_extraction_pipeline_v2.py  test_gradio_v2.py  test_integration.py  test_integration_real_api.py  test_interview_graph.py  test_interview_manager.py  test_llm_clients.py  test_opportunity_ranker.py  test_schema_manager.py  (+6 more)
(+119 files in other folders)
